// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composition: Predictive IME Text replacement on Software Keyboard - Android - GOOGLE. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Wasn't ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Composition: Predictive IME Text replacement on Software Keyboard - Android - SAMSUNG. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Cat ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Composition: Predictive IME Text replacement on Software Keyboard - iOS - APPLE. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "On my way! ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
